--- a/zoom.html
+++ b/zoom.html
@@ -7,20 +7,69 @@
     <script src="zoom.js"></script>
 </head>
 <body>
-    <label id="l1">Nom</label>
-    <input id="i1" type="text" placeholder="Entre nom">
-    <button id="rien" onclick="maFonction()">Valide</button>
-    <button id="bt2" onclick="changer()">oogabooga</button>
+   <script>
+       //declarations variables globales
+       etat1=0
+       etat2=0
+       tableau1=["po.jpg","Shifu.jpeg","ping.jpg"]
+       tableau2=["ping.jpg","po.jpg","Shifu.jpeg"]
 
 
-    
-    <p id="demo" onclick="maFonction2()">Un clic change le contenu(innerHTML)</p>
+       function tournerbis(classe, etat, tableau){
+           //recuperation des images de la classe
+           images=document.getElementsByClassName(classe);
+           if(etat==0){
+               for(i=0;i<images.length; i++){
+                   images[i].src="1280px-HD_transparent_picture.png";
+               }
+           }
+           else{
+               for(i=0;i<images.length; i++){
+                   images[i].src=tableau[i];
+               }
+           }
+           if(classe=="c1"){
+               if(etat==0){
+                   etat1=1
+               }
+               else{
+                etat1=0
+               }
+           }
+           if(classe=="c2") {
+               if (etat == 0) {
+                   etat2 = 1
+               }
+               else{
+                   etat2=0
+               }
+           }
+       }
+       function tourner(classe){
+           if(classe == "c1"){
+               tournerbis(classe, etat1, tableau1)
+           }
+           else{
+               tournerbis(classe, etat2, tableau2)
+           }
 
-    <div id="tout">
-        <div id="car1"></div>
-        <div id="car2"></div>
-        <div id="car3"></div>
-    </div>
+       }
+
+
+
+
+
+
+
+
+
+
+
+
+
+   </script>
+
+
 
 <table border="1">
     <tr>
@@ -34,8 +83,8 @@
         <td><img class="c2" onclick="f(this)" src="Shifu.jpeg"></td>
     </tr>
 </table>
-<button onclick="tourner1('c1')"> Tourner cartes</button>
-<button onclick="tourner2('c2')"> Tourner cartes (2)</button>
+<button onclick="tourner('c1')"> Tourner cartes (1)</button>
+<button onclick="tourner('c2')"> Tourner cartes (2)</button>
 
 </body>
 </html>
